Fix overflow hosting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -910,7 +910,7 @@ img{
     }
 
     .desc-content .div-info-author{
-        top: -242px;
+        /* top: -242px; */
     }
 
     /* CSS for footer-item */
